--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "scss": "node-sass --watch public/scss -o public/css"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
@@ -14,5 +15,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "node-sass": "^9.0.0"
     }
 }
