machine sales entry create wip

--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-snappy": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "proengsoft/laravel-jsvalidation": "^4.9"
+        "maatwebsite/excel": "^3.1",
+        "proengsoft/laravel-jsvalidation": "^4.9",
+        "yajra/laravel-datatables": "^11.0",
+        "yajra/laravel-datatables-oracle": "^11.0",
+        "yoeunes/toastr": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
+        "laravel/ui": "^4.5",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "pestphp/pest": "^2.0",
